# aidoku-rs

./: ..h  .gitignore  Cargo.toml  LICENSE  README.md  crates.js  foo.wat  help.html  index.html  main.c  main.h  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yaml  clippy.yml  docs.yml
aidoku/: all.html  enum.ContentRating.html  enum.DeepLinkResult.html  enum.FilterKind.html  enum.FilterType.html  enum.FilterValue.html  enum.HomeComponentValue.html  enum.HomePartialResult.html  enum.IdKind.html  enum.LinkValue.html  enum.ListingKind.html  enum.LoginMethod.html  enum.MangaContentRating.html  enum.MangaStatus.html  enum.MangaViewer.html  enum.PageContent.html  enum.PageIcon.html  enum.SettingValue.html  enum.UpdateStrategy.html  enum.Viewer.html  fn.alloc_error_handle.html  fn.panic_handle.html  index.html  macro.bail.html  macro.debug.html  macro.error.html  macro.println.html  macro.register_source.html  sidebar-items.js  struct.ButtonSetting.html  struct.Chapter.html  struct.CheckFilter.html  struct.DeepLink.html  struct.EditableListSetting.html  struct.Filter.html  struct.FilterItem.html  struct.GroupSetting.html  struct.HashMap.html  struct.HomeComponent.html  struct.HomeLayout.html  (+42 more)
aidoku/alloc/: index.html  macro.format.html  macro.vec.html  sidebar-items.js  struct.Box.html  struct.String.html  struct.Vec.html
aidoku/canvas/: enum.FontWeight.html  enum.LineCap.html  enum.LineJoin.html  enum.PathOp.html  index.html  sidebar-items.js  struct.Color.html  struct.Path.html  struct.PathBuilder.html  struct.Point.html  struct.Rect.html  struct.StrokeStyle.html  type.Angle.html  type.Transform.html
aidoku/error/: enum.AidokuErrorKind.html  enum.NodeError.html  enum.ValueCastError.html  index.html  sidebar-items.js  struct.AidokuError.html  type.Result.html
aidoku/helpers/: index.html  sidebar-items.js
aidoku/imports/: index.html  sidebar-items.js
aidoku/prelude/: attr.get_chapter_list.html  attr.get_manga_details.html  attr.get_manga_list.html  attr.get_manga_listing.html  attr.get_page_list.html  attr.handle_notification.html  attr.handle_url.html  attr.initialize.html  attr.modify_image_request.html  index.html  macro.bail.html  macro.debug.html  macro.error.html  macro.format.html  macro.println.html  (+3 more)
aidoku_cli/: all.html  index.html  sidebar-items.js
aidoku_helpers/: all.html  index.html  sidebar-items.js
aidoku_imports/: all.html  enum.Kind.html  fn.copy.html  fn.current_date.html  fn.destroy.html  fn.print.html  fn.value_kind.html  index.html  sidebar-items.js  struct.ArrayRef.html  struct.ObjectRef.html  struct.StringRef.html  struct.ValueRef.html  trait.Write.html  type.Rid.html
aidoku_macros/: all.html  index.html  macro.format.html  macro.println.html  sidebar-items.js
aidoku_test/: all.html  attr.aidoku_test.html  index.html  sidebar-items.js
aidoku_test_runner/: all.html  index.html  sidebar-items.js
book/: 404.html  book.toml  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-prerequisites.html  ch01-02-tooling.html  ch02-00-creating-a-source.html  ch02-01-resource-files.html  ch02-02-the-rust-program.html  ch03-00-running.html  ch04-00-debugging.html  index.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-6a33ce1e.js  searchindex-be299fb3.js  toc-8abf7655.js  toc-c6bb31e9.js  toc.html
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs
crates/cli/src/commands/: build.rs  init.rs  logcat.rs  mod.rs  package.rs  serve.rs  verify.rs
crates/cli/src/models/: mod.rs
crates/cli/src/supporting/: Cargo.toml.template  README.md  filters.schema.json  settings.schema.json  source-lib.rs.template  source-template-lib.rs.template  source.schema.json  template-lib.rs.template
crates/cli/src/supporting/schema/: filters.schema.json  settings.schema.json  source.schema.json
crates/cli/src/supporting/templates/: config.toml.template  source-lib.rs.template  source-template-lib.rs.template  template-lib.rs.template
crates/lib/: Cargo.toml  README.md
crates/lib/src/: lib.rs  structs.rs
crates/lib/src/helpers/: cfemail.rs  date.rs  element.rs  mod.rs  string.rs  uri.rs
crates/lib/src/imports/: canvas.rs  defaults.rs  error.rs  html.rs  js.rs  mod.rs  net.rs  std.rs
crates/lib/src/macros/: mod.rs
crates/lib/src/structs/: canvas.rs  filter.rs  home.rs  mod.rs  setting.rs  source.rs
crates/lib/tests/: helpers.rs
crates/test-macro/: Cargo.toml  README.md
crates/test-macro/src/: lib.rs
crates/test-runner/: Cargo.toml  README.md
crates/test-runner/src/: lib.rs
crates/test-runner/src/imports/: canvas.rs  defaults.rs  env.rs  html.rs  js.rs  mod.rs  net.rs  std.rs
crates/test-runner/src/libs/: defaults.rs  html.rs  mod.rs  net.rs  store.rs
crates/test-runner/tests/: html.rs
example_source/: all.html  fn.__wasm_get_chapter_list.html  fn.__wasm_get_manga_details.html  fn.__wasm_get_manga_list.html  fn.__wasm_get_manga_listing.html  fn.__wasm_get_page_list.html  fn.__wasm_handle_notification.html  fn.__wasm_handle_url.html  fn.__wasm_initialize.html  fn.__wasm_modify_image_request.html  index.html  sidebar-items.js
examples/example-source/: Cargo.toml  README.md  build.sh
examples/example-source/.cargo/: config.toml
examples/example-source/res/: source.json
examples/example-source/src/: lib.rs
examples/test_source/: Cargo.toml  foo.wat
examples/test_source/src/: lib.rs
search.index/: 00066387489c.js  0058f61ee6.js  007f653153ce.js  00fd6b480dc9.js  010a03cd2265.js  0123980aae.js  013f57483e92.js  018df553ebce.js  01a29c1ca882.js  0291c6b9ba81.js  02956b0720f9.js  02a43b1da4d6.js  02bbef48812e.js  02bf2eb07017.js  02d0ee075757.js  02fecdffc761.js  036df31fedb4.js  036f721eaa.js  038ab22f41.js  03904853bb4e.js  03bfb3249c9e.js  03d3945118d0.js  042378131c3e.js  047b1fe058cc.js  04daccffd89d.js  04f0aca4bf25.js  05132ce26b52.js  051423239f.js  05183e9471db.js  05684a9b5f.js  05814d6c30b7.js  05af51ba04d1.js  05b6222d728e.js  05cf10873a81.js  05fb035f96e3.js  05fdb7ab368f.js  063a15ca6c.js  06596efdb861.js  0669b41149b6.js  06919f3e3222.js  (+924 more)
(+789 files in other folders)
