[package]
name = "buny"
version = "0.1.0"
description = "Buny source API wrapper"
repository = "https://github.com/BunyApp/buny-rs"
authors = ["skitty", "pandeynmn"]
edition = "2021"
publish = false

[dependencies]
talc = { version = "4.4.2", optional = true, default-features = false, features = ["lock_api"] }
hashbrown = { version = "0.14.5", features = ["serde"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"], optional = true }
postcard = { version = "1.1.1", features = ["alloc"] }
euclid = { version = "0.22.11", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
thiserror = { version = "2.0.12", default-features = false }
itoa = "1.0.15"
paste = "1.0.15"

[features]
default = ["talc", "imports", "helpers"]
test = []
imports = []
json = ["serde_json"]
helpers = []
