[package]
name = "aidoku"
version = "0.3.0"
description = "Aidoku source API wrapper"
repository = "https://github.com/Aidoku/aidoku-rs"
authors = ["skitty"]
edition = "2024"
publish = false

[features]
default = ["talc", "imports", "helpers"]
test = []
imports = []
json = ["serde_json"]
helpers = []

[dependencies]
euclid = { version = "0.22", default-features = false, features = ["libm"] }
hashbrown = { version = "0.16", features = ["serde"] }
itoa = "1.0"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
paste = "1.0"
postcard = { version = "1.1", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
talc = { version = "4.4", optional = true, default-features = false, features = ["lock_api"] }
thiserror = { version = "2.0", default-features = false }
