[package]
name = "buny-test"
version = "1.0.0"
description = "Test framework for Buny sources"
repository = "https://github.com/Buny/buny-rs"
authors = ["skitty"]
edition = "2021"
publish = false

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[lib]
proc-macro = true
