[package]
name = "example-source"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { path = "../../crates/lib" }

[dev-dependencies]
aidoku = { path = "../../crates/lib", features = ["test"] }
aidoku-test = { path = "../../crates/test-macro" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
