[package]
name = "example_source"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt = "s"
strip = "debuginfo"
lto = true

[dependencies]
aidoku_imports = { path = "../../crates/aidoku_imports" }
wee_alloc = "0.4.5"
